<resources>
    <string name="app_name" translatable="false">AutoPlay</string>
    <string name="after">after</string>
    <string name="volume">Volume</string>
    <string name="delay">Delay</string>
    <string name="percent">Percent</string>
    <string name="seconds">Seconds</string>
    <string name="settings">Settings</string>
    <string name="devices">Devices</string>
    <string name="launching">Launching playback</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="waiting">Waiting for connection</string>
    <string name="playback">Playback</string>
</resources>
